# project3

./: .gitignore  CMakeLists.txt  ChangesFromGPtCode.patch  LICENSE  README.md
include/: Camera.hpp  Cube.hpp  Shader.hpp  Window.hpp
lib/: CMakeLists.txt
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
lib/GLFW/src/: cocoa_platform.h  internal.h  null_platform.h  win32_platform.h  wl_platform.h  x11_init.c  x11_platform.h  x11_window.c
lib/GLM/doc/api/: a00153_source.html
lib/GLM/glm/detail/: func_common.inl  setup.hpp
lib/GLM/glm/ext/: scalar_ulp.inl
lib/GLM/glm/gtc/: ulp.inl
lib/GLM/glm/simd/: platform.h
lib/GLM/test/core/: core_func_integer.cpp
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  Camera.cpp  Cube.cpp  Shader.cpp  Window.cpp  main.cpp
